package com.design_pattern.observer;

/**
 * Created by xuzhongming on 2018/2/7.
 * 抽象观察者
 */
public interface Observer {
    public void update(String message);
}
